Updated citation of paper

--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
                 <div class="details">
                     <h3>Publication</h3>
                     <p><strong>Analytical uncertainty-based loss weighting in multi-task learning</strong></p>
-                    <p>In Proceedings of GCPR 2024</p>
+                    <p>In Proceedings of the DAGM German Conference on Pattern Recognition (GCPR), pp. 344–361. Springer Nature Switzerland, 2024. </p>
                     <p>Proposed a novel uncertainty-based task-weighting method that optimally balances task losses in multi-task learning, achieving high performance with lower computational cost compared to brute-force approaches.</p>
-                    <a href="https://arxiv.org/abs/2408.07985" target="_blank">Read on arXiv</a>
+                    Read on <a href="https://link.springer.com/chapter/10.1007/978-3-031-85181-0_22" target="_blank">Springer Nature Link</a> or <a href="https://arxiv.org/abs/2408.07985" target="_blank">arXiv</a>
                 </div>
             </div>
             
