--- a/index.html
+++ b/index.html
@@ -71,29 +71,19 @@
         <div class="about-section">
             <h2>Professional</h2>
             <p>
-                Results-driven AI and Machine Learning Engineer Consultant with a proven track record in leading and executing cutting-edge AI solutions that drive business transformation.
+                AI & Machine Learning Engineer Consultant with expertise in building and deploying production-ready models for generative AI, computer vision, and anomaly detection. 
             </p>
             <p>
-                Expert in developing and deploying sophisticated machine learning models using technologies like Python, PyTorch, TensorFlow, Keras, and scikit-learn, with a deep focus on generative AI, Computer Vision, and anomaly detection.
+                Skilled in Python, PyTorch, TensorFlow, and cloud platforms (AWS, Azure), with experience optimizing workflows through containerization and distributed computing.
             </p>
             <p>
-                Demonstrated leadership in managing cross-functional teams, driving AI project lifecycles, and implementing CI/CD pipelines, ensuring the seamless integration and scalability of AI solutions.           
-            </p>
-            <p>
-                Extensive experience with cloud platforms (AWS, Azure), containerization (Docker, Kubernetes), and distributed computing, leveraging large-scale data to optimize business processes and decision-making.
-            </p>
-            <p>
-                Proven ability to take ownership of AI initiatives, from conceptualization to deployment, and mentor teams to achieve technical excellence.            
-            </p>
-            <p>
-                Adept at aligning AI strategy with organizational goals to deliver impactful, business-critical results.
+                Strong record of translating business needs into scalable AI solutions that improve efficiency and decision-making.
             </p>
             <h3>Notable Achievements</h3>
             <ul>
                 <li>Patented innovations in loss weighting strategies for neural networks</li>
                 <li>Published paper at prestigious conference GCPR 2024</li>
                 <li>Developed and deployed scalable AI solutions for Fortune 500 companies</li>
-                <li>Led cross-functional teams to deliver successful AI projects</li>
             </ul>
         </div>
     </section>
